[project]
name = "aha"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "click==8.4.1",
    "rich==15.0.0",
    "pyyaml==6.0.3"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
aha = "aha.main:cli"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"resources" = [
    "profiles/**/*",
    "templates/**/*",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
